--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,19 +1,43 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @student.email %>
-</p>
-
-<p>
-  <strong>Username:</strong>
-  <%= @student.username %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @student.password_digest %>
-</p>
-
-<%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'Back', students_path %>
+<h1 class="page-header">Profile</h1>
+<div class="row">
+    <!-- left column -->
+    <div class="col-md-4 col-sm-1 col-xs-12">
+      <div class="text-center">
+         <%= image_tag(@student.picture, class:"avatar img-circle img-thumbnail")%>
+      </div>
+    </div>
+    <!-- edit form column -->
+    <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
+      <h3>Personal info</h3>
+      
+      <div class="form-horizontal">
+        <div class="form-group">
+          <%= label_tag :username,'Username', class: "col-lg-3 control-label" %>
+          <div class="col-lg-5">
+            <%= text_field_tag :username,@student.username , class: "form-control",:readonly => true%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag :email,'Email', class: "col-lg-3 control-label" %>
+          <div class="col-lg-5">
+            <%= text_field_tag :email,@student.email , class: "form-control",:readonly => true%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag :password,'Password', class: "col-lg-3 control-label" %>
+          <div class="col-lg-5">
+            <%= password_field_tag :password, 'password' , class: "form-control",:readonly => true	%>
+          </div>
+        </div>
+        <div class="form-group">
+          
+          <div class="col-md-8">
+           <%= link_to 'Edit', edit_student_path(@student), class: "btn btn-primary" %>
+           <%= link_to 'Back', students_path,  class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
